--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.js"
+    "start": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.19",
+    "@types/node": "^20.8.6",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
