--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/nickolasalcazar/restaurant-search#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.12.4",
+    "openai-node": "^1.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
