--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/nickolasalcazar/restaurant-search#readme",
   "dependencies": {
+    "@types/cors": "^2.8.15",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "openai": "^4.12.4",
     "openai-node": "^1.0.5"
